# atomization_scorer

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
src/atomization_scorer/: __init__.py  cli.py
src/atomization_scorer/data_processing/: __init__.py  fasta_reader.py  fasta_writer.py  geese_reader.py  paf_processing.py  paf_to_geese.py  utils.py
src/atomization_scorer/pipeline/: __init__.py  minimap2_aligner.py  representatives_selector.py  true_pipeline.py
src/atomization_scorer/scoring_system/: __init__.py  alignment_score.py  base_metrics.py  coverage_score.py  helpers.py  interval_metrics.py  overall_score.py
tests/: conftest.py  test_cli.py
tests/data_processing/: test_fasta_reader.py  test_fasta_writer.py  test_geese_reader.py  test_paf_processing.py  test_paf_to_geese.py  test_utils.py
tests/fixtures/: mini.geese
tests/pipeline/: test_minimap2_aligner.py  test_representatives_selector.py  test_true_pipeline.py
tests/scoring_system/: test_alignment_score.py  test_base_metrics.py  test_coverage_score.py  test_helpers.py  test_interval_metrics.py  test_overall_score.py
